--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\RAJIB\eclipse-workspace\FrameworkPractice\TestSuites\ErrorValidation.xml</span>
+                    <span>C:\Users\RAJIB\eclipse-workspace\FrameworkPractice\TestSuites\Purchase.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Automation.Tests.ErrorValidationTest" class="method navigator-link" hash-for-method="loginErrorValidation">loginErrorValidation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="Automation.Tests.SubmitOrderTest" class="method navigator-link" hash-for-method="submitOrder({password=Rajiv@123, email=rajiv09@yopmail.com, productName=ADIDAS ORIGINAL})">submitOrder({password=Rajiv@123, email=rajiv09@yopmail.com, productName=ADIDAS ORIGINAL})</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="Automation.Tests.SubmitOrderTest" class="method navigator-link" hash-for-method="submitOrder({password=Tani@2613, email=taniya09@yomail.com, productName=ZARA COAT 3})">submitOrder({password=Tani@2613, email=taniya09@yomail.com, productName=ZARA COAT 3})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -121,14 +126,23 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Automation.Tests.ErrorValidationTest</span>
+              <span class="class-name">Automation.Tests.SubmitOrderTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginErrorValidation">
-                  </a> <!-- loginErrorValidation -->
-                  <span class="method-name">loginErrorValidation</span>
+                  <a name="submitOrder({password=Rajiv@123, email=rajiv09@yopmail.com, productName=ADIDAS ORIGINAL})">
+                  </a> <!-- submitOrder({password=Rajiv@123, email=rajiv09@yopmail.com, productName=ADIDAS ORIGINAL}) -->
+                  <span class="method-name">submitOrder</span>
+                  <span class="parameters">({password=Rajiv@123, email=rajiv09@yopmail.com, productName=ADIDAS ORIGINAL})</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="submitOrder({password=Tani@2613, email=taniya09@yomail.com, productName=ZARA COAT 3})">
+                  </a> <!-- submitOrder({password=Tani@2613, email=taniya09@yomail.com, productName=ZARA COAT 3}) -->
+                  <span class="method-name">submitOrder</span>
+                  <span class="parameters">({password=Tani@2613, email=taniya09@yomail.com, productName=ZARA COAT 3})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +150,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\RAJIB\eclipse-workspace\FrameworkPractice\TestSuites\ErrorValidation.xml</span>
+            <span class="header-content">C:\Users\RAJIB\eclipse-workspace\FrameworkPractice\TestSuites\Purchase.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,12 +159,12 @@
 &lt;suite parallel=&quot;tests&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;groups&gt;
     &lt;run&gt;
-      &lt;include name=&quot;Error Handling&quot;/&gt;
+      &lt;include name=&quot;Purchase&quot;/&gt;
     &lt;/run&gt;
   &lt;/groups&gt;
   &lt;groups&gt;
     &lt;run&gt;
-      &lt;include name=&quot;Error Handling&quot;/&gt;
+      &lt;include name=&quot;Purchase&quot;/&gt;
     &lt;/run&gt;
   &lt;/groups&gt;
   &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;Submit Order Test&quot;&gt;
@@ -188,10 +202,10 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
-              <span class="test-group-name">Error Handling</span>
+              <span class="test-group-name">Purchase</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">loginErrorValidation</span>
+                <span class="method-in-group-name">submitOrder</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -211,16 +225,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginErrorValidation')
-data.setCell(0, 2, 'Automation.Tests.ErrorValidationTest')
-data.setCell(0, 3, 1085);
+data.setCell(0, 1, 'submitOrder')
+data.setCell(0, 2, 'Automation.Tests.SubmitOrderTest')
+data.setCell(0, 3, 14792);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'submitOrder')
+data.setCell(1, 2, 'Automation.Tests.SubmitOrderTest')
+data.setCell(1, 3, 14719);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 38 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -239,18 +257,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">Automation.Tests.ErrorValidationTest</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">productErrorValidation</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
-            <div class="ignored-class-div">
               <span class="ignored-class-name">Automation.Tests.SubmitOrderTest</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">orderHistory</span>
                 <br/>
-                <span class="ignored-method-name">submitOrder</span>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">Automation.Tests.ErrorValidationTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">productErrorValidation</span>
+                <br/>
+                <span class="ignored-method-name">loginErrorValidation</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -262,18 +280,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Automation.Tests.ErrorValidationTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Automation.Tests.SubmitOrderTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">lunchApplication</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">loginErrorValidation</span>
-                <span class="method-start">5848 ms</span>
+                <span class="method-name">submitOrder({password=Tani@2613, email=taniya09@yomail.com, productName=ZARA COAT 3})</span>
+                <span class="method-start">4848 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">6936 ms</span>
+                <span class="method-start">19567 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">lunchApplication</span>
+                <span class="method-start">19683 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">submitOrder({password=Rajiv@123, email=rajiv09@yopmail.com, productName=ADIDAS ORIGINAL})</span>
+                <span class="method-start">22943 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">37735 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
