--- a/reports/index.html
+++ b/reports/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Framework Design Test Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jun 1, 2025 01:33:46 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jun 1, 2025 09:41:46 PM</span></a>
 </li>
 </ul>
 </div>
@@ -80,14 +80,55 @@
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="fail" test-id="1"
+        <li class="test-item"  status="pass" test-id="1"
+          author=""
+          tag=""
+          device="">
+          <div class="test-detail">
+            <p class="name">submitOrder</p>
+            <p class="text-sm">
+              <span>9:41:57 PM</span> / <span>00:00:15:009</span>
+              <span class="badge pass-bg log float-right">Pass</span>
+            </p>
+          </div>
+          <div class="test-contents d-none">
+<div class="detail-head">
+<div class="p-v-10">
+<div class="info">
+<h5 class="test-status text-pass">submitOrder</h5>
+<span class='badge badge-success'>06.01.2025 9:41:57 PM</span>
+<span class='badge badge-danger'>06.01.2025 9:42:12 PM</span>
+<span class='badge badge-default'>00:00:15:009</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
+<span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
+<span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
+<span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
+</div>
+</div>
+</div><div class="detail-body mt-4">
+<table class="table table-sm">
+  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
+  <tbody>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>9:42:12 PM</td>
+        <td>
+          Test is passed
+        </td>
+      </tr>
+  </tbody>
+</table>
+</div>
+          </div>
+        </li>
+        <li class="test-item"  status="fail" test-id="2"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">loginErrorValidation</p>
             <p class="text-sm">
-              <span>1:33:52 PM</span> / <span>00:00:05:230</span>
+              <span>9:41:57 PM</span> / <span>00:00:00:773</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -96,10 +137,10 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">loginErrorValidation</h5>
-<span class='badge badge-success'>06.01.2025 1:33:52 PM</span>
-<span class='badge badge-danger'>06.01.2025 1:33:57 PM</span>
-<span class='badge badge-default'>00:00:05:230</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
+<span class='badge badge-success'>06.01.2025 9:41:57 PM</span>
+<span class='badge badge-danger'>06.01.2025 9:41:58 PM</span>
+<span class='badge badge-default'>00:00:00:773</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
 <span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
@@ -119,7 +160,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>1:33:57 PM</td>
+        <td>9:41:58 PM</td>
         <td>
           <textarea readonly class="code-block">java.lang.AssertionError: expected [Incorrect email or password.] but found [Incorrect email and password.]
 	at org.testng.Assert.fail(Assert.java:111)
@@ -129,8 +170,10 @@
 	at org.testng.Assert.assertEquals(Assert.java:656)
 	at org.testng.Assert.assertEquals(Assert.java:666)
 	at Automation.Tests.ErrorValidationTest.loginErrorValidation(ErrorValidationTest.java:22)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
 	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:687)
 	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:230)
@@ -139,59 +182,18 @@
 	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:203)
 	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:154)
 	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:134)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
 	at org.testng.TestRunner.privateRun(TestRunner.java:741)
 	at org.testng.TestRunner.run(TestRunner.java:616)
 	at org.testng.SuiteRunner.runTest(SuiteRunner.java:421)
 	at org.testng.SuiteRunner$SuiteWorker.run(SuiteRunner.java:463)
 	at org.testng.internal.thread.ThreadUtil.lambda$execute$0(ThreadUtil.java:64)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
-	at java.base/java.lang.Thread.run(Thread.java:1575)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:842)
 </textarea>
           
-        </td>
-      </tr>
-  </tbody>
-</table>
-</div>
-          </div>
-        </li>
-        <li class="test-item"  status="pass" test-id="2"
-          author=""
-          tag=""
-          device="">
-          <div class="test-detail">
-            <p class="name">submitOrder</p>
-            <p class="text-sm">
-              <span>1:33:55 PM</span> / <span>00:00:14:744</span>
-              <span class="badge pass-bg log float-right">Pass</span>
-            </p>
-          </div>
-          <div class="test-contents d-none">
-<div class="detail-head">
-<div class="p-v-10">
-<div class="info">
-<h5 class="test-status text-pass">submitOrder</h5>
-<span class='badge badge-success'>06.01.2025 1:33:55 PM</span>
-<span class='badge badge-danger'>06.01.2025 1:34:09 PM</span>
-<span class='badge badge-default'>00:00:14:744</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
-<span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
-<span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
-<span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
-</div>
-</div>
-</div><div class="detail-body mt-4">
-<table class="table table-sm">
-  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
-  <tbody>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:34:09 PM</td>
-        <td>
-          Test is passed
         </td>
       </tr>
   </tbody>
@@ -206,7 +208,7 @@
           <div class="test-detail">
             <p class="name">productErrorValidation</p>
             <p class="text-sm">
-              <span>1:34:02 PM</span> / <span>00:00:13:659</span>
+              <span>9:42:06 PM</span> / <span>00:00:13:537</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -215,9 +217,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">productErrorValidation</h5>
-<span class='badge badge-success'>06.01.2025 1:34:02 PM</span>
-<span class='badge badge-danger'>06.01.2025 1:34:15 PM</span>
-<span class='badge badge-default'>00:00:13:659</span>
+<span class='badge badge-success'>06.01.2025 9:42:06 PM</span>
+<span class='badge badge-danger'>06.01.2025 9:42:19 PM</span>
+<span class='badge badge-default'>00:00:13:537</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -230,7 +232,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:34:15 PM</td>
+        <td>9:42:19 PM</td>
         <td>
           Test is passed
         </td>
@@ -247,7 +249,7 @@
           <div class="test-detail">
             <p class="name">submitOrder</p>
             <p class="text-sm">
-              <span>1:34:17 PM</span> / <span>00:00:15:170</span>
+              <span>9:42:20 PM</span> / <span>00:00:14:872</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -256,9 +258,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">submitOrder</h5>
-<span class='badge badge-success'>06.01.2025 1:34:17 PM</span>
-<span class='badge badge-danger'>06.01.2025 1:34:32 PM</span>
-<span class='badge badge-default'>00:00:15:170</span>
+<span class='badge badge-success'>06.01.2025 9:42:20 PM</span>
+<span class='badge badge-danger'>06.01.2025 9:42:35 PM</span>
+<span class='badge badge-default'>00:00:14:872</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -271,7 +273,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:34:32 PM</td>
+        <td>9:42:35 PM</td>
         <td>
           Test is passed
         </td>
@@ -288,7 +290,7 @@
           <div class="test-detail">
             <p class="name">orderHistory</p>
             <p class="text-sm">
-              <span>1:34:36 PM</span> / <span>00:00:00:762</span>
+              <span>9:42:42 PM</span> / <span>00:00:00:689</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -297,9 +299,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">orderHistory</h5>
-<span class='badge badge-success'>06.01.2025 1:34:36 PM</span>
-<span class='badge badge-danger'>06.01.2025 1:34:37 PM</span>
-<span class='badge badge-default'>00:00:00:762</span>
+<span class='badge badge-success'>06.01.2025 9:42:42 PM</span>
+<span class='badge badge-danger'>06.01.2025 9:42:43 PM</span>
+<span class='badge badge-default'>00:00:00:689</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -312,7 +314,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:34:37 PM</td>
+        <td>9:42:43 PM</td>
         <td>
           Test is passed
         </td>
@@ -363,9 +365,9 @@
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>13:33:52 PM</td>
+<td>21:41:57 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='1'>loginErrorValidation</a>
+<a href="#" class="linked" test-id='2' id='2'>loginErrorValidation</a>
 </td>
 </tr>
 </tbody>
@@ -385,13 +387,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jun 1, 2025 01:33:46 PM</h3>
+<h3>Jun 1, 2025 09:41:46 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jun 1, 2025 01:34:37 PM</h3>
+<h3>Jun 1, 2025 09:42:44 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -461,7 +463,7 @@
 </div></div>
 <script>
 var timeline = {
-"loginErrorValidation":5.23,"submitOrder":14.744,"productErrorValidation":13.659,"submitOrder":15.17,"orderHistory":0.762
+"submitOrder":15.009,"loginErrorValidation":0.773,"productErrorValidation":13.537,"submitOrder":14.872,"orderHistory":0.689
 };
 </script>
 <div class="row">
